--- a/.github/workflows/androidci.yml
+++ b/.github/workflows/androidci.yml
@@ -24,12 +24,12 @@ jobs:
       - name: Start Emulator and Run Tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 30
+          api-level: 34
           target: google_apis
           arch: x86_64
-          profile: Nexus 6
+          profile: Pixel_8
           script: |
-            adb install ./apps/app-debug.apk
+            adb install ./app/android/SauceLabs.apk
             npm install -g appium
             appium --log-level info &
             sleep 10
