--- a/.github/workflows/androidci.yml
+++ b/.github/workflows/androidci.yml
@@ -27,7 +27,7 @@ jobs:
           api-level: 30
           target: google_apis
           arch: x86_64
-          profile: Nexus_5X
+          profile: Pixel_3a
           script: |
             adb install ./app/android/SauceLabs.apk
             npm install -g appium
