--- a/.github/workflows/androidci.yml
+++ b/.github/workflows/androidci.yml
@@ -1,72 +1,23 @@
 name: Android UI Tests
-
-on:
-  push:
-    branches: [main]
-
+on: [push]
 jobs:
-  android-test:
+  build:
     runs-on: ubuntu-latest
-    timeout-minutes: 30
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Start Emulator and Run Tests
-        uses: reactivecircus/android-emulator-runner@v2
-        with:
-          api-level: 30
-          target: google_apis
-          arch: x86_64
-          profile: Nexus 6
-          script: |
-            echo "Emulator started, waiting for boot to complete..."
-
-            adb wait-for-device
-
-            # Wait for boot to complete
-            boot_completed="0"
-            until [[ "$boot_completed" == "1" ]]; do
-              echo "Waiting for emulator to finish booting..."
-              sleep 5
-              boot_completed=$(adb shell getprop sys.boot_completed 2>/dev/null | tr -d '\r')
-            done
-
-            echo "Emulator booted successfully!"
-
-            echo "Installing app..."
-            adb install ./app/android/SauceLabs.apk
-
-            echo "Detecting emulator device ID..."
-            export DEVICE_ID=$(adb devices | grep emulator | cut -f1)
-            echo "DEVICE_ID=$DEVICE_ID" >> $GITHUB_ENV
-            echo "Using DEVICE: $DEVICE_ID"
-
-            echo "Starting Appium server..."
-            npm install -g appium
-            appium --log-level info &
-            sleep 10
-
-            echo "Running test cases..."
-            npm run test:android
-
-      - name: Upload WDIO Test Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: wdio-report
-          path: wdio-reports/
-
-      - name: Upload Screenshots
-        uses: actions/upload-artifact@v4
-        with:
-          name: error-screenshots
-          path: errorShots/
+        - name: Checkout
+          uses: actions/checkout@v2
+        - uses: actions/setup-node@v1
+          with:
+            node-version: 18.0
+        - name: Install
+          run: npm install
+        - name: Test
+          env:
+            BROWSERSTACK_USER: ${{ secrets.BS_USER }}
+            BROWSERSTACK_KEY: ${{ secrets.BS_KEY }}
+          run: npx wdio config/wdio.android.bs.conf.js --spec test/specs/android/add-note-screen.spec.js
+        - uses: actions/upload-artifact@v1
+          if: failure()
+          with:
+            name: logs
+            path: logs
