--- a/.github/workflows/androidci.yml
+++ b/.github/workflows/androidci.yml
@@ -16,8 +16,9 @@ jobs:
             BROWSERSTACK_USER: ${{ secrets.BS_USER }}
             BROWSERSTACK_KEY: ${{ secrets.BS_KEY }}
           run: npx wdio wdio.conf.js
-        - uses: actions/upload-artifact@v3
+        - name: Upload logs if tests fail
           if: failure()
+          uses: actions/upload-artifact@v3
           with:
             name: logs
             path: logs
