--- a/.github/workflows/androidci.yml
+++ b/.github/workflows/androidci.yml
@@ -13,8 +13,8 @@ jobs:
           run: npm install
         - name: Test
           env:
-            BROWSERSTACK_USER: ${{ secrets.BS_USER }}
-            BROWSERSTACK_KEY: ${{ secrets.BS_KEY }}
+            BS_USER: ${{ secrets.BS_USER }}
+            BS_KEY: ${{ secrets.BS_KEY }}
           run: npx wdio wdio.conf.js
         - name: Upload logs if tests fail
           if: failure()
