--- a/.github/workflows/androidci.yml
+++ b/.github/workflows/androidci.yml
@@ -17,8 +17,8 @@ jobs:
 
       - name: Run WDIO Tests
         env:
-          BS_USER: ${{ secrets.BS_USER }}
-          BS_KEY: ${{ secrets.BS_KEY }}
+          BROWSERSTACK_USER: ${{ secrets.BS_USER }}
+          BROWSERSTACK_KEY: ${{ secrets.BS_KEY }}
         run: npx wdio wdio.conf.js
 
       - name: Upload logs if tests fail
