--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "WDIOAppium-Workshop",
   "type": "module",
   "devDependencies": {
+    "@wdio/allure-reporter": "^9.12.3",
     "@wdio/appium-service": "^9.12.4",
     "@wdio/browserstack-service": "^9.12.5",
     "@wdio/cli": "^9.12.4",
@@ -15,6 +16,7 @@
     "wdio": "wdio run ./wdio.conf.js"
   },
   "dependencies": {
+    "allure-commandline": "^2.33.0",
     "dotenv": "^16.4.7"
   }
 }
