--- a/.github/workflows/androidci.yml
+++ b/.github/workflows/androidci.yml
@@ -30,16 +30,16 @@ jobs:
           npx wdio wdio.conf.js
           echo "✅ Test run completed."
 
-      - name: 🧰 Generate Allure Report
-        if: always() # ensures it runs even if tests fail
-        run: |
-          echo "📊 Generating Allure report..."
-          npx allure generate allure-results --clean -o allure-report
-          echo "✅ Allure report generated."
-
-      - name: 📤 Upload Allure Report
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: allure-report
-          path: allure-report
+          - name: 📊 Generate Allure Report
+          if: always()
+          run: |
+            echo "📊 Generating Allure report..."
+            npx allure generate allure-results --clean -o allure-report
+            echo "📁 Allure report generated at: $(pwd)/allure-report"
+            echo "📄 HTML index: $(pwd)/allure-report/index.html"
+  
+          - name: 📂 List Report Directory (Debug)
+          if: always()
+          run: |
+            echo "🧾 Listing contents of allure-report:"
+            ls -R allure-report
