--- a/.github/workflows/androidci copy.yml
+++ b/.github/workflows/androidci copy.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-22.04  # ✅ Use stable runner
 
     steps:
       - name: 🧾 Checkout repository
@@ -29,14 +29,3 @@ jobs:
           echo "🧪 Starting tests with WebdriverIO..."
           npx wdio wdio.conf.js
           echo "✅ Test run completed."
-
-      - name: 📊 Generate Allure Report
-        run: |
-          npx allure generate allure-results --clean -o allure-report
-          echo "✅ Allure report generated."
-
-      - name: 📤 Upload Allure Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: allure-report
-          path: allure-report/
